--- a/packages/i18n/package.json
+++ b/packages/i18n/package.json
@@ -20,9 +20,9 @@
   },
   "devDependencies": {
     "@tazeai/typescript-config": "workspace:*",
-    "@types/node": "catalog:",
-    "@types/react": "catalog:",
-    "@types/react-dom": "catalog:",
+    "@types/node": "^22.15.29",
+    "@types/react": "^19.1.6",
+    "@types/react-dom": "^19.1.6",
     "typescript": "catalog:"
   }
 }
